--- a/ContosoPizza/appsettings.json
+++ b/ContosoPizza/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "EmailHost": "smtp.gmail.com",
+  "EmailUserName": "nda2932002@gmail.com",
+  "EmailPassword": "oihcfhpohmfuzrua",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
